--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.3.9",
+    "@nestjs/swagger": "^6.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
