chore(renovate): update config file

--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,29 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ],
+  "extends": ["config:base"],
   "commitBodyTable": true,
   "branchPrefix": "deps/",
-  "labels": ["dependencies"]
+  "labels": ["dependencies"],
+  "stabilityDays": 3,
+  "semanticCommits": true,
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["major"],
+      "addLabels": ["d:major"]
+    },
+    {
+      "matchUpdateTypes": ["minor"],
+      "addLabels": ["d:minor"]
+    },
+    {
+      "matchUpdateTypes": ["patch"],
+      "addLabels": ["d:patch"],
+      "automerge": true
+    },
+    {
+      "matchUpdateTypes": ["pin"],
+      "addLabels": ["d:pin"],
+      "automerge": true
+    },
+  ]
 }
