ci: remove matrix strategy

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,6 @@ jobs:
     name: Tests on node ${{ matrix.node }}
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node: [14, 16, 18, 'lts/*', 'latest']
 
     steps:
       - name: Checkout repo
@@ -18,7 +15,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node }}
+          node-version: latest
 
       - name: Install PNPM
         run: npm i -g pnpm
