--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [pull_request, push]
 
 jobs:
   test:
-    name: Tests on node ${{ matrix.node }}
+    name: Run test suit
     runs-on: ubuntu-latest
 
 
@@ -24,7 +24,7 @@ jobs:
         run: pnpm install
 
       - name: Run Tests
-        run: pnpm test
+        run: pnpm test:ci
 
   lint:
     name: Check code lint
