chore(package): add "prisma" script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "depcheck": "npx depcheck"
+    "depcheck": "npx depcheck",
+    "prisma": "prisma"
   },
   "dependencies": {
     "@fastify/static": "^6.9.0",
