--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
+    "@paralleldrive/cuid2": "^2.2.0",
     "@prisma/client": "^4.11.0",
     "@types/validator": "^13.7.14",
     "class-transformer": "^0.5.1",
