--- a/package.json
+++ b/package.json
@@ -65,5 +65,9 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
+  },
+  "optionalDependencies": {
+    "semver": "^7.5.0",
+    "simple-git": "^3.17.0"
   }
 }
