--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Update CHANGELOG.md
         run: |
           npx conventional-changelog-cli -p conventionalcommits -i docs/CHANGELOG.md -s -r 0 &&\
-            git add CHANGELOG.md &&\
+            git add docs/CHANGELOG.md &&\
             git commit -m "docs(CHANGELOG): v$(git describe --tags --abbrev=0)" &&\
             git push
 
